# simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
circuit/: rca12.blif  signed-multiplier-16x16.blif
simulator/: CMakeLists.txt
simulator/src/: header.h  headers.h  main.cc  main.cpp  my_abc.cc  my_abc.h  my_util.cc  my_util.h  simulator.cc  simulator.h  simulatorPro.cpp  simulatorPro.h
src/: main.cpp
